--- a/server_side/package.json
+++ b/server_side/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "MMJ Delivery Service",
   "main": "server.js",
-  "dependencies": {},
+  "dependencies": {
+    "cors": "^2.7.1"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "testing",
