--- a/server_side/package.json
+++ b/server_side/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "bcrypt": "^0.8.5",
     "connect-multiparty": "^2.0.0",
-    "cors": "^2.7.1"
+    "cors": "^2.7.1",
+    "jsonwebtoken": "^5.5.4"
   },
   "devDependencies": {},
   "scripts": {
