leafly api cors error

--- a/server_side/.env
+++ b/server_side/.env
@@ -1,3 +1,4 @@
 TWILIO_ACCOUNT_SID='AC2c10f28149f3e8fc2994b69b239b70d8'
 TWILIO_AUTH_TOKEN='8b5959a01dfbad34ed00254271651dd6'
 TWILIO_NUMBER='+15304815948'
+MONGOLAB_URI='mongodb://admin:fefe9999@ds045785.mongolab.com:45785/api-cannabis-strains'
